--- a/nginx.conf
+++ b/nginx.conf
@@ -26,5 +26,5 @@ http {
     keepalive_timeout  65;
     server_tokens off;
 
-    #include /etc/nginx/conf.d/*.conf;
+    include /etc/nginx/conf.d/*.conf;
 }
